# ChangeLog for dev-python/cliapp
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cliapp/ChangeLog,v 1.17 2015/01/21 10:06:59 ago Exp $

  21 Jan 2015; Agostino Sarubbo <ago@gentoo.org> cliapp-1.20130808.ebuild,
  cliapp-1.20140315.ebuild:
  Add ~sparc, wrt bug #530672

  20 Jan 2015; Agostino Sarubbo <ago@gentoo.org> cliapp-1.20130808.ebuild,
  cliapp-1.20140315.ebuild:
  Add ~ia64, wrt bug #530672

  20 Jan 2015; Agostino Sarubbo <ago@gentoo.org> cliapp-1.20130808.ebuild,
  cliapp-1.20140315.ebuild:
  Add ~alpha, wrt bug #530672

  19 Jan 2015; Agostino Sarubbo <ago@gentoo.org> cliapp-1.20130808.ebuild,
  cliapp-1.20140315.ebuild:
  Add ~ppc64, wrt bug #530672

  19 Jan 2015; Agostino Sarubbo <ago@gentoo.org> cliapp-1.20130808.ebuild,
  cliapp-1.20140315.ebuild:
  Add ~ppc, wrt bug #530672

  26 Dec 2014; Markus Meier <maekke@gentoo.org> cliapp-1.20140315.ebuild:
  add ~arm, bug #530672

  29 Nov 2014; Jeroen Roovers <jer@gentoo.org> cliapp-1.20140315.ebuild:
  Marked ~hppa (bug #530672).

*cliapp-1.20140315 (16 Mar 2014)

  16 Mar 2014; Marc Schiffbauer <mschiff@gentoo.org> -cliapp-1.20130313.ebuild,
  +cliapp-1.20140315.ebuild:
  Bump version. Remove oldest version.

*cliapp-1.20130808 (09 Aug 2013)

  09 Aug 2013; Marc Schiffbauer <mschiff@gentoo.org> +cliapp-1.20130808.ebuild,
  -cliapp-1.20120630.ebuild, -cliapp-1.20120929.ebuild,
  -cliapp-1.20121216.ebuild:
  Bump version. Remove older versions

  24 Mar 2013; Marc Schiffbauer <mschiff@gentoo.org> cliapp-1.20130313.ebuild:
  added $PYTHONDEPS

*cliapp-1.20130313 (24 Mar 2013)

  24 Mar 2013; Marc Schiffbauer <mschiff@gentoo.org> +cliapp-1.20130313.ebuild:
  Version bump

*cliapp-1.20121216 (18 Dec 2012)

  18 Dec 2012; Marc Schiffbauer <mschiff@gentoo.org> +cliapp-1.20121216.ebuild:
  Version bump.

*cliapp-1.20120929 (06 Oct 2012)

  06 Oct 2012; Marc Schiffbauer <mschiff@gentoo.org> -cliapp-0.29.ebuild,
  +cliapp-1.20120929.ebuild: