@@ -1,26 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST cliapp-1.20150305.tar.gz 55133 SHA256 09865ea3b2e63b41f4399997651d2c19c918922745b570530ff7dd5f77e49bd9 SHA512 a32e987bfc6e401672dc1e94fb29034b96fec5bba5864e1001d52460ecdd6cb903ad1bbbe52cfb6d8d880abd029c98f26c3edca8ed79ec10f77e86bfff595aa3 WHIRLPOOL 2286e990958f5012146ac07635f9ce4f1adf96b34cc4d47d4e2d21f472d576cd71a3633591f1e855eb79e3155c1d942cacabc1e96e1413d851f2b78f1d8a3578
 DIST python-cliapp_1.20130808.orig.tar.gz 50236 SHA256 62944c5b99beecb3fe5fff5321b35b71e0cc21c9cc212ebbad26b00cd5c42e45 SHA512 6f8b3bdcf2e737ecf3ebc92f43b85aaf9fbf848635ddcdf7f252dca9a2ea7b8fceb47908742cbbb2e25695ce7ffc7110053c9d648f3616aff87434ecdcb0b493 WHIRLPOOL 5d4f253ae265b37ae59679625daafd7bde39cdb8403663c3b537d27108f47e908888efc504e9e63d20ac0f7e564148ec0424a39864f76b1047116ed9b8f5a93e
 DIST python-cliapp_1.20140315.orig.tar.gz 51107 SHA256 55bec495881ba6759c07f1b94658e3b3b21fa3f04c8bbac2c5fe8b8ce1bf862d SHA512 ce538baec212d5d5149b0aa0ab542919e465fee6700104079842022bc47ef42e65d42179689e998d524feb6b7981e3e396f30266a4a8aa7373ebf1ae8013c2d9 WHIRLPOOL 3237ee51e1c8c15355e1b8a24e25f5c70eb242783e7be226bc400e750e98f708ccf3eb004a2bae4a6b8dc7ba4d39f512de8db4577123a5433e3ffc4f50bf7c71
 EBUILD cliapp-1.20130808.ebuild 765 SHA256 d9eaa3c646b0686411ebbb68d281bc4910ea80708609a6ce5112767039315ffb SHA512 7e5f12a8b9176ea84dffeee84f9ee1645fa342a31cf5aa0d0c7a6d3c70bfd54b0d4ba6bf0be11a9ecd86c067bb44e60ff200c7da4d646a9270ed08dce636ce95 WHIRLPOOL f5325cbbc76ca89de1c7258eb3d91b0eacf8fa57f84f348d294d0c6fef0ee7bc0046864b963991a58a531cb8552374bea752d86963d064204bd48846e4c23294
 EBUILD cliapp-1.20140315.ebuild 788 SHA256 bda4a70c376f79ee1cc3d87de60859d1b669eb35e3b1d50c8bc628fcb1dbdac0 SHA512 43c18950a60f08bac3bade62de9819f0845c389ba11ae86bc2130e64aa42c485ba60accef290a37f5bb95a1e5592447e22e02c7fa46e241c3bc72a62beb582e0 WHIRLPOOL 073a139a5004e17f721f494a36d97714856626a032bb9abba219e1549aa214c4c07e1af5e9abe6b7a5aebd6787cfbc9f84c1914b48f0b93fd01ea62873b5f5d1
-MISC ChangeLog 2512 SHA256 d74dc9d169ccb3b79ff80d8d0ab7a191cd0e7dd6824667d0bcd511a386e1a76e SHA512 c46c4762e9d8ba54b5ee7fc739f8fa2fdefa67f9a6267ed812ca22c43523667575f3f12287410b389f07eb24f3f4551bbc3630022162007e3262b4a293dfbfc7 WHIRLPOOL 384abd27c32cec00348a3532b5426682ec36f8256a9cfa1ca9af6e538b7d7a73a9789842b43f948d2c6922e50a62b7ae298b1189021294e94f5d39f846d1832a
+EBUILD cliapp-1.20150305.ebuild 741 SHA256 5de288c6ba59c61004d170992781e7d4f23dee7e6cc86f6d4e95b52a3023a5e8 SHA512 edd92cc94017070aa9a7c0f5b3c8a09ac039b23edc6b7a6189bd924c1feccb1836df66168eed7167fd20fd852547982bed5e367d2832b3180e03b926a1cd0550 WHIRLPOOL 02331959913566e1cff4eecbe6a8441bd367d1b482047e6e84380a587b6adc6654fe36c8d2765f92e3a3e2b193ff26bcbca281e2271f99c2fc9236ec2b755305
+MISC ChangeLog 2646 SHA256 62b38fb370d8391c470da2ab2e7a2983048cb3c82dd40af2ff70b19423612d1c SHA512 5ce506da60cb707718a1ce250220129ae8ba1790f1fc652d56795dc1fd3d56c7d9a1445f3e608fd9b590ea70b2db57c468868312f2fea84182355b8ce7a2d65f WHIRLPOOL 3157ea14f992b32d7cbcfb95a3cafadb0e55caf931339b29551757191673112f5fb7965861e9a2130a4a7282fe2b72b4414ad57d31b94e64dc2797891923a329
 MISC metadata.xml 236 SHA256 f55443c9b3d97fcc9437b9aeba1b3beae39e38599620bd520d0693bb8948b531 SHA512 842ec0962624e280c2c3909e6da541cdaf35532f0f00d76cc9ca0e03dfb8c3dc83a426ae370bc37d73d0c4b1fdd4983171a0586220546b967afe3a3f5dd78ce4 WHIRLPOOL 8ee0a6397a1bae24973eba9b31e1ac64bac9726ca45e5f2127a3ffc991627479030060c605c7cf0957891c184f5e5d01fb2387f94c3a68693c988e4a180c7260
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUv3pFAAoJELp701BxlEWf6FkQAKpiGnzsNdtw+3FV6GYb5uE4
-LoJ2WxflwsnNsxrVFoefa383BZE2YTTlxySsR6YITT0oU5D6xdfzvD5WvmsyCi3x
-5bj2C4nMr9CgrY+mdZW/CmhZGJLD99EkzRqnUPZeDsWmKGaUPrMAVs4DRQfDgyCZ
-OjzM4o16rmi6OFNMnxYdeaqP82r5mXswtdMk5Bo+JeQ8skgO5nJ3sE2dA7fh5ZU5
-TjkZX63pstxsJoKlcr72/T01Vo/3CTbBcV5O/G2x4yRLR9DKsXoYZ8pHrEoPTv2W
-XMdBm+mS5MPsjidXocQ0f+UPH3fB13Mo6OWCQ5QjC04TYTzlwSxR8aXgFDV8pevm
-sqQ+/8cJMrJliuwKuSIdxHnRJE6rpf+f7SI6xe2mNVibVTpzcrsDI/2+ajuzPgZu
-EZHdiC8HukHvnEFBxihQ3fqSII+pXQOXFuNYsk2MSsMb/uSpBMXI4ma7W4buyLzz
-QYQUfaymvkXz3Aa95UagxH+dP6xBO273WKSuuEpjV+XhobAI9bbsAyKaEQz8/Rvk
-0QDkD+SO+5nbHH6lqWmhc5P82CqBaC8L3TlegNUTVFxo+JEyxmgXyJTtI5pu+po+
-kuuYcgEidXLZEa93cj6UU4iUBbINO2VVGD5bw7oWNDvISD0vkpnqa6pU5w+iYv0P
-zQJcQLNuGagksnCgWID/
-=mjfy
+iD8DBQFVD1i/KWxsyjWmQTQRCEOQAJ9hu0fywN0B1h4h3iLV0D2SvQ6hZACfbmHu
+Sv64FN3QNAf0GAWroQUiH+8=
+=IQKz
 -----END PGP SIGNATURE-----
